compiler/testData/cli/jvm/optInEmptyMessageFir.out
warning: ATTENTION!
 This build uses in-dev FIR:
  -Xuse-fir
compiler/testData/cli/jvm/optInEmptyMessage.kt:8:5: error: this declaration is experimental and its usage must be marked
    foo()
    ^
COMPILATION_ERROR
